--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -5246,6 +5246,16 @@ portugal.30.d:0 "We just got a visit from the Portuguese foreign minister, who t
  CAN_trade_fleet_desc:0 "Canada is a trading nation. Build more freighters and convoys."
  CAN_united_shipyards:0 "United Shipyards"
  CAN_united_shipyards_desc:0 "The Montreal dock of United Shipyards has become the primary source for our landing craft and cargo vessels."
+ CAN_mend_relations_with_the_trotskyites:0 "Mend Relations with the Trotskyites"
+ CAN_mend_relations_with_the_trotskyites_desc:0 "Old rifts in the party have divided our people for too long. It is time to embrace these once-trusted exiles and reforge our purpose as the only true beacon of the people's will."
+ CAN_trotsky_loves_us:0 "Brothers in Arms"
+ CAN_stalin_and_friends_hate_us_now:0 "Dissident Suspicions"
+ CAN_reject_authoritarianism:0 "Introspective Communism"
+ CAN_reject_authoritarianism_desc:0 "With conflict and division growing around us, it has become apparent that our unique geographical and societal circumstances deter us from the wider socialist movements, and the trappings of rumored authoritarianism that come with them. The people's movement must begin again - with us."
+ CAN_reactivate_farmers_unity_league:0 "Reactivate the Farmer's Unity League"
+ CAN_reactivate_farmers_unity_league_desc:0 "The Unity League performed important work leading up to our glorious revolution. Now, in our time of desperate need, we must call upon these rural loyalists to aid the state in any way possible."
+ CAN_liberate_the_workers_of_the_world:0 "Spirit of the True Revolution"
+ CAN_liberate_the_workers_of_the_world_desc:0 "Such is our conviction in the utopia we have built, that our young men and women flock the the banner so that our downtrodden comrades in foreign lands - suffering under the yoke of oppressive regimes - might yet have a taste of our thoroughly Canadian freedom."
 
  SAF_lessons_of_ww1:0 "Lessons from Lettow-Vorbeck"
  SAF_lessons_of_ww1_desc:0 "The Lion of Africa - Paul von Lettow-Vorbeck proved how modern guerilla warfare should be conducted in Africa during the great war. We need to study and adopt the tactics used."
