--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -385,7 +385,7 @@
  end_of_czechoslovakia:0 "Controls Bohemia"
  GER_air_innovations_1_idea:0 "German Pilot Training"
  GER_four_year_plan:0 "Four Year Plan"
- GER_four_year_plan_desc:0 "For decades, we have allowed unchecked control over our economy, believing in the “free markets” to optimizee the use of our resources. Time and time again, we have seen that it does not bring prosperity to the masses, rather it enriches wealthy oligarchs who hold dubious loyalties to our regime and it's future plans. §RWill be removed when in offensive war.§!\n"
+ GER_four_year_plan_desc:0 "For decades, we have allowed unchecked control over our economy, believing in the “free markets” to optimize the use of our resources. Time and time again, we have seen that it does not bring prosperity to the masses, rather it enriches wealthy oligarchs who hold dubious loyalties to our regime and it's future plans. §RWill be removed when in offensive war.§!\n"
  GER_railway_boost:0 "Rush Eastern Railway Consctruction"
  GER_railway_boost_desc:0 "We must build up the rail infrastructure in our regions before going to war against the Bolsheviks!"
  GER_DAF:0 "Deutsche Arbeitsfront"
@@ -2217,6 +2217,7 @@
  CAN_communist_ideals:0 "Communist Ideals"
  CAN_communist_ideals_2:0 "Communist Ideals"
  CAN_communist_ideals_3:0 "Communist Ideals"
+ CAN_communist_ideals_4:0 "Communist Ideals"
  AUS_leonard_sandmeier:0 "Leonard Sandmeier"
  AUS_eduard_freiherr:0 "Eduard Freiherr"
  AUS_alexander_lohr:0 "Alexander Löhr"
@@ -5776,3 +5777,6 @@
  MAN_hoankyoku_idea_desc:0 "A secretive organization dedicated to dealing with undesired elements in society."
 
  RAJ_3:0 "Nawab Chhatari"
+ CAN_unified_communist_party:0 "The People, United"
+ CAN_unified_communist_party_desc:0 "Old rifts are mended; relationships repaired. Yet our tolerance in service of a shared destiny is looked upon with suspicion by those who pay only lip service to the cause, driven by that basest of motivations: the pursuit of power."
+ CAN_true_revolution:0 "True Revolution"
