--- a/bicemodded/localisation/english/modifiers_l_english.yml
+++ b/bicemodded/localisation/english/modifiers_l_english.yml
@@ -1020,7 +1020,7 @@
  resource_sabotage_decrease_tooltip_UNCHANGED:0 "  Resource Sabotage Chance: §G-25%§! (§H+0%§!)\n  Resource Sabotage Duration: §G-25%§! (§H+0%§!)"
  factory_sabotage_decrease_tooltip_UNCHANGED:0 "  Civilian Factory Sabotage Chance: §G-25%§! (§H+0%§!)\n  Military Factory Sabotage Chance: §G-25%§! (§H+0%§!)"
 
- modifier_repair_speed_infrastructure_factor:0 "Civilian Factory Repair Speed"
+ modifier_repair_speed_infrastructure_factor:1 "Infrastructure Repair Speed"
  modifier_repair_speed_industrial_complex_factor:0 "Civilian Factory Repair Speed"
  modifier_repair_speed_arms_factory_factor:0 "Military Factory Repair Speed"
  modifier_repair_speed_anti_air_building_factor:0 "Anti-Air Repair Speed"
@@ -1082,28 +1082,28 @@
  modifier_state_production_speed_supply_node_factor_desc:0 "Modifies the speed of §Y$supply_node$§! construction in this state."
  modifier_state_production_speed_rail_way_factor:0 "§Y$rail_way$§! construction speed"
  modifier_state_production_speed_rail_way_factor_desc:0 "Modifies the speed of §Y$rail_way$§! construction in this state."
- modifier_state_production_infrastructure_factor:0 "§Y$infrastructure$§! construction speed"
- modifier_state_production_infrastructure_factor_desc:0 "Modifies the speed of §Y$infrastructure$§! construction in this state."
- modifier_state_production_arms_factory_factor:0 "§Y$arms_factory$§! construction speed"
- modifier_state_production_arms_factory_factor_desc:0 "Modifies the speed of §Y$arms_factory$§! construction in this state."
- modifier_state_production_air_base_factor:0 "§Y$air_base$§! construction speed"
- modifier_state_production_air_base_factor_desc:0 "Modifies the speed of §Y$air_base$§! construction in this state."
- modifier_state_production_naval_base_factor:0 "§Y$naval_base$§! construction speed"
- modifier_state_production_naval_base_factor_desc:0 "Modifies the speed of §Y$naval_base$§! construction in this state."
- modifier_state_production_dockyard_factor:0 "§Y$dockyard$§! construction speed"
- modifier_state_production_dockyard_factor_desc:0 "Modifies the speed of §Y$dockyard$§! construction in this state."
- modifier_state_production_anti_air_building_factor:0 "§Y$anti_air_building$§! construction speed"
- modifier_state_production_anti_air_building_factor_desc:0 "Modifies the speed of §Y$anti_air_building$§! construction in this state."
- modifier_state_production_synthetic_refinery_factor:0 "§Y$synthetic_refinery$§! construction speed"
- modifier_state_production_synthetic_refinery_factor_desc:0 "Modifies the speed of §Y$synthetic_refinery$§! construction in this state."
- modifier_state_production_fuel_silo_factor:0 "§Y$fuel_silo$§! construction speed"
- modifier_state_production_fuel_silo_factor_desc:0 "Modifies the speed of §Y$fuel_silo$§! construction in this state."
- modifier_state_production_radar_station_factor:0 "§Y$radar_station$§! construction speed"
- modifier_state_production_radar_station_factor_desc:0 "Modifies the speed of §Y$radar_station$§! construction in this state."
- modifier_state_production_rocket_site_factor:0 "§Y$rocket_site$§! construction speed"
- modifier_state_production_rocket_site_factor_desc:0 "Modifies the speed of §Y$rocket_site$§! construction in this state."
- modifier_state_production_nuclear_reactor_factor:0 "§Y$nuclear_reactor$§! construction speed"
- modifier_state_production_nuclear_reactor_factor_desc:0 "Modifies the speed of §Y$nuclear_reactor$§! construction in this state."
+ modifier_state_production_speed_arms_factory_factor:0 "§Y$arms_factory$§! construction speed"
+ modifier_state_production_speed_arms_factory_factor_desc:0 "Modifies the speed of §Y$arms_factory$§! construction in this state."
+ modifier_state_production_speed_air_base_factor:0 "§Y$air_base$§! construction speed"
+ modifier_state_production_speed_air_base_factor_desc:0 "Modifies the speed of §Y$air_base$§! construction in this state."
+ modifier_state_production_speed_naval_base_factor:0 "§Y$naval_base$§! construction speed"
+ modifier_state_production_speed_naval_base_factor_desc:0 "Modifies the speed of §Y$naval_base$§! construction in this state."
+ modifier_state_production_speed_dockyard_factor:0 "§Y$dockyard$§! construction speed"
+ modifier_state_production_speed_dockyard_factor_desc:0 "Modifies the speed of §Y$dockyard$§! construction in this state."
+ modifier_state_production_speed_anti_air_building_factor:0 "§Y$anti_air_building$§! construction speed"
+ modifier_state_production_speed_anti_air_building_factor_desc:0 "Modifies the speed of §Y$anti_air_building$§! construction in this state."
+ modifier_state_production_speed_synthetic_refinery_factor:0 "§Y$synthetic_refinery$§! construction speed"
+ modifier_state_production_speed_synthetic_refinery_factor_desc:0 "Modifies the speed of §Y$synthetic_refinery$§! construction in this state."
+ modifier_state_production_speed_synthetic_rubber_refinery_factor:0 "§Y$synthetic_rubber_refinery$§! construction speed"
+ modifier_state_production_speed_synthetic_rubber_refinery_factor_desc:0 "Modifies the speed of §Y$synthetic_rubber_refinery$§! construction in this state."
+ modifier_state_production_speed_fuel_silo_factor:0 "§Y$fuel_silo$§! construction speed"
+ modifier_state_production_speed_fuel_silo_factor_desc:0 "Modifies the speed of §Y$fuel_silo$§! construction in this state."
+ modifier_state_production_speed_radar_station_factor:0 "§Y$radar_station$§! construction speed"
+ modifier_state_production_speed_radar_station_factor_desc:0 "Modifies the speed of §Y$radar_station$§! construction in this state."
+ modifier_state_production_speed_rocket_site_factor:0 "§Y$rocket_site$§! construction speed"
+ modifier_state_production_speed_rocket_site_factor_desc:0 "Modifies the speed of §Y$rocket_site$§! construction in this state."
+ modifier_state_production_speed_nuclear_reactor_factor:0 "§Y$nuclear_reactor$§! construction speed"
+ modifier_state_production_speed_nuclear_reactor_factor_desc:0 "Modifies the speed of §Y$nuclear_reactor$§! construction in this state."
  intel_network_state_level_bonus:0 "£operative_mission_icons_small|1£Intel Network"
  intel_network_state_level_penalty:0 "£operative_mission_icons_small|1£Enemy Intel Network"
  created_intelligence_agency:0 "Intelligence Agency"
