--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -1342,6 +1342,8 @@
  USA_wpa_idea_desc:0 "The Work Progress Administration is putting millions of people to work rebuilding America."
  USA_social_security_idea:0 "Social Security"
  USA_social_security_idea_desc:0 "Social Security provides help to the people in need, such as the unemployed, old, young, and disabled. This is a costly program, but very popular."
+ USA_social_security_idea_2:0 "Social Security"
+ USA_social_security_idea_2_desc:0 "Social Security provides help to the people in need, such as the unemployed, old, young, and disabled. This is a costly program, but very popular."
  USA_rural_electrification:0 "Rural Electrification"
  USA_rural_electrification_desc:0 "The Rural Electrification Act has led to a boost in the construction of infrastructure across the United States."
  USA_caa:0 "Civil Aeronautics Act"
@@ -1357,6 +1359,7 @@
  USA_NLRA_spirit:0 "National Labor Relations Act"
  USA_AERO_idea:0 "Civil Aeronautics Administration"
  USA_PWA_spirit:0 "Public Works Administration"
+ USA_PWA_spirit_2:0 "Federal Security Agency"
  USA_executive_office:0 "Executive Office"
  USA_the_pentagon:0 "The Pentagon"
 
