--- a/bicemodded/localisation/english/TW_events_l_english.yml
+++ b/bicemodded/localisation/english/TW_events_l_english.yml
@@ -564,6 +564,21 @@
  usa.118.b:0 "... be given local autonomy."
  usa.118.c:0 "... integrated as a new state."
  
+ usa.119.t:0 "Correspondence with Former Naval Person"
+ usa.119.d:0 "The US wants to open a personal dialogue with naval representatives, helping us prepare and coordinate our fleets on the high seas."
+ 
+ usa.120.t:0 "Military support from [USA.GetNameDefCap]"
+ usa.120.d:0 "We have received a large shipment of arms from [USA.GetNameDefCap] and more support is on the way for §Y180 days§!, they surely expect us to give further support to their cause."
+ 
+ usa.121.t:0 "Military support from [USA.GetNameDefCap]"
+ usa.121.d:0 "We have received a large shipment of arms from [USA.GetNameDefCap], they surely expect us to give further support to their cause."
+ 
+ usa.122.t:0 "Flying Tigers"
+ usa.122.d:0 "We have received a two fighter squadrons from [USA.GetNameDefCap], they surely expect us to give further support to their cause."
+ 
+ usa.123.t:0 "Military support from [USA.GetNameDefCap]"
+ usa.123.d:0 "We have received a large shipment of arms from [USA.GetNameDefCap], they surely expect us to give further support to their cause."
+ 
  USA_NATO_overwatch_tt:0 "§RYou will only keep the last selected idea of the ones obtainable through §!§YOverwatch the Pacific§!§R and §!§YReturn to Europe§!."
 
  
