--- a/bicemodded/localisation/english/decisions_TW_l_english.yml
+++ b/bicemodded/localisation/english/decisions_TW_l_english.yml
@@ -399,6 +399,8 @@
  USA_CCC_mission_1_desc:0 "Civilian Conservation Corps"
  USA_CCC_mission_2:0 "Expand the Civilian Conservation Corps"
  USA_CCC_mission_2_desc:0 "We can expand the Civilian Conservation Corps to take on more jobs."
+ USA_RAILWAY:0 "Rail Works Administration"
+ USA_RAILWAY_desc:0 "Rail Works Administration"
  USA_CWA:0 "Civil Works Administration"
  USA_CWA_desc:0 "Civil Works Administration"
  USA_Hoover:0 "Finish the Hoover Dam"
