--- a/bicemodded/localisation/english/events_l_english.yml
+++ b/bicemodded/localisation/english/events_l_english.yml
@@ -2293,6 +2293,12 @@
  soviet.430.a:0 "Purge Nikolai Yezhov"
  soviet.430.b:0 "Not enough evidence"
  
+ soviet.431.t:0 "Military support from [SOV.GetNameDefCap]"
+ soviet.431.d:0 "We have received a large shipment of arms from [SOV.GetNameDefCap] and more support is on the way for §Y180 days§!, they surely expect us to give further support to the comintern cause."
+ 
+ soviet.432.t:0 "Military support delivered by [SOV.GetNameDefCap]"
+ soviet.432.d:0 "We have received the last shipment of arms from [SOV.GetNameDefCap] for now."
+ 
  
  japan.15.t:0 "Indian National Army"
  japan.15.d:0 "Following our defeats of the British we have a great number of Indian prisoners of war. With the right persuasion, we could use those prisoners to bolster our forces..."
