--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -133,6 +133,14 @@
  USA_f86sabre_desc:0 "We need a swept-wing jet fighter to rule the skies if we are to keep up with other major powers going into the 1950s."
  USA_peacemaker:0 "Peacemaker"
  USA_peacemaker_desc:0 "We need a heavy high altitude bomber capable of intercontinental bombing runs. This airplane will be able to carry over 30 tons of bombs from the safety of our shores to Germany, resistance will be futile!"
+ 
+ USA_mustang:0 "Mustangs"
+ USA_mustang_desc:0 ""
+ 
+ USA_nav_bombers:0 "Naval Attack Bombers"
+ USA_nav_bombers_desc:0 ""
+ 
+ 
  USA_3LA:0 "Establish the 3 Letter Agencies"
  USA_3LA_desc:0 "The 3 Letter Agencies will be part of the Presidents new plan to address the Depression.  These will cover all parts of life, and hopefully address the problems American people are facing with the Great Depression."
  USA_public_works:0 "Public Works Administration"
