--- a/bicemodded/localisation/english/lar_focus_l_english.yml
+++ b/bicemodded/localisation/english/lar_focus_l_english.yml
@@ -974,7 +974,7 @@
  FRA_refus_absurde:0 "Refus Absurde"
  FRA_refus_absurde_desc:0 "Even in the hour of defeat, the will to resist remains strong in some hearts. They will form the foundation of the resistance movement in the occupied territories."
  FRA_the_maquis:0 "The Maquis"
- FRA_the_maquis_desc:1 "The rural areas of France offer cover for anyone who wishes to escape from the occupier or their collaboratist lackeys. We should support the people who deny their labour to the enemy in an act of resistance, so that we may in time turn those areas into hotbeds of resistance."
+ FRA_the_maquis_desc:2 "The rural areas of France offer cover for anyone who wishes to escape from the occupier or their collaborationist lackeys. We should support the people who deny their labour to the enemy in an act of resistance, so that we may in time turn those areas into hotbeds of resistance."
  FRA_reach_out_to_trade_unions:0 "Reach Out To Trade Unions"
  FRA_reach_out_to_trade_unions_desc:0 "If we are to strike against the industries that have now been pressed into service by the enemy, having good communications with the workers there seems like the best way. They can delay or sabotage any production that takes place, far more efficiently than any outside force."
  FRA_cooperation_with_the_communists:0 "Cooperation With the Communists"
