--- a/bicemodded/localisation/english/parties_l_english.yml
+++ b/bicemodded/localisation/english/parties_l_english.yml
@@ -979,3 +979,5 @@
  MAC_democratic_party_long:0 "Demokratska Stranka"
  MAC_neutrality_party:0 "Vardarska Ban"
  MAC_neutrality_party_long:0 " Vardarska Ban (Ban of the Vardar)"
+ transylvania_fascism_party_long:0 "Fascist"
+ transylvania_fascism_party:0 "Fascist"
