--- a/bicemodded/localisation/english/triggers_l_english.yml
+++ b/bicemodded/localisation/english/triggers_l_english.yml
@@ -893,5 +893,5 @@
  
  TRIGGER_PC_IS_INSIDE_INFLUENCE_RANGE: "Is inside max AI influence range" ##Will never be displayed
  TRIGGER_PC_IS_OUTSIDE_INFLUENCE_RANGE: "Is outside max AI influence range" ##Will never be displayed
- TRIGGER_HAS_COMPLETED_CUSTOM_ACHIEVEMENT: "Has completed achievement $ACHIEVEMENT$"
- TRIGGER_HAS_NOT_COMPLETED_CUSTOM_ACHIEVEMENT: "Has not completed achievement $ACHIEVEMENT$"
+ TRIGGER_HAS_COMPLETED_CUSTOM_ACHIEVEMENT:1 "Has completed achievement $ACHIEVEMENT|H$"
+ TRIGGER_HAS_NOT_COMPLETED_CUSTOM_ACHIEVEMENT:1 "Has not completed achievement $ACHIEVEMENT|H$"
