--- a/bicemodded/localisation/english/events_l_english.yml
+++ b/bicemodded/localisation/english/events_l_english.yml
@@ -1042,7 +1042,7 @@
  news.24.d:0 "In a heated speech today before the Reichstag, Adolf Hitler denounced Poland and their treatment of Germans living in Danzig and the Polish Corridor. \n\nClaiming that German minorities in Poland are being 'persecuted in the vilest manner imaginable,' Hitler made the position of his government clear:\n'Danzig was a German city and is a German city! The Corridor was German and is German! Without the German Volk, these eastern regions would still be plunged in the depths of barbarism.'"
  news.24.a:0 "The war grows nearer."
  news.25.t:0 "The Remilitarization of the Rhineland"
- news.25.d:0 "Germany has stationed troops in the Rhineland territory, close to the French border, in clear violation of the Treaty of Versailles. The local population cheered the German soldiers on, while the diplomatic reactions from France and Britain have so far been muted.\n\n'It is no more than the Germans walking into their own backyard,' a political commentator in Britain observed."
+ news.25.d:0 "Germany has stationed troops in the Rhineland territory, close to the French border, in clear violation of the Treaty of Versailles. The local population cheered the German soldiers on, while the diplomatic reactions from France and Britain have so far been muted.\n\n'It is no more than the Germans walking into their own backyard', a political commentator in Britain observed."
  news.25.a:0 "Worrying."
  news.25.b:1 "It is German territory."
  news.25.c:0 "We must see to our border defenses."
