...  uk heavy bombers dont show up

--- a/bicemodded/localisation/english/equip_air_l_english.yml
+++ b/bicemodded/localisation/english/equip_air_l_english.yml
@@ -1757,25 +1757,18 @@ NOR_nav_bomber_equipment_3_short:"PBY"
  hawker_hurricane_mkiv_equipment_1:0 "Hawker Hurricane MK IV CAS"
  hawker_hurricane_mkiv_equipment_1_short:0 "Hurricane MK IV CAS"
  hawker_hurricane_mkiv_equipment_1_desc:0 "Developed from the Hawker Fury as a monoplane design, the Hawker Hurricane would go on to be one of the most numerous fighters of the war."
- tech_hawker_hurricane_mkiv_equipment_1:0 "Hawker Hurricane MK IV CAS"
- hawker_typhoon_mkia_equipment:0 "Typhoon MK IA CAS"
- hawker_typhoon_mkia_equipment_desc:0 "CAS are close-support-aircraft that are designed to support friendly forces by attacking enemy troops and ships."
  UK_cas_equipment_3_a:0 "Hawker Typhoon MK IA CAS"
  UK_cas_equipment_3_a_short:0 "Typhoon MK IA CAS"
  UK_cas_equipment_3_a_desc:0 "The Hawker Typhoon was developed as a replacement for the Hawker Hurricane. It had excellent performance at low altitude and was an effective fighter-bomber."
- tech_UK_cas_equipment_3_a:0 "Hawker Typhoon MK IA CAS"
- hawker_typhoon_mkib_equipment:0 "Typhoon MK IB CAS"
- hawker_typhoon_mkib_equipment_desc:0 "CAS are close-support-aircraft that are designed to support friendly forces by attacking enemy troops and ships."
- UK_cas_equipment_4_a:0 "Hawker Typhoon MK IB CAS"
- UK_cas_equipment_4_a_short:0 "Typhoon MK IB CAS"
+ UK_cas_equipment_4_a:0 "Hawker Typhoon MK V CAS"
+ UK_cas_equipment_4_a_short:0 "Typhoon MK V CAS"
  UK_cas_equipment_4_a_desc:0 "The Hawker Typhoon was developed as a replacement for the Hawker Hurricane. It had excellent performance at low altitude and was an effective fighter-bomber."
- tech_UK_cas_equipment_4_a:0 "Hawker Typhoon MK IB CAS"
- hawker_typhoon_mkv_equipment:0 "Typhoon MK V CAS"
- hawker_typhoon_mkv_equipment_desc:0 "CAS are close-support-aircraft that are designed to support friendly forces by attacking enemy troops and ships."
- UK_cas_equipment_5_a:0 "Hawker Typhoon MK V CAS"
- UK_cas_equipment_5_a_short:0 "Typhoon MK V CAS"
- UK_cas_equipment_5_a_desc:0 "The Hawker Typhoon was developed as a replacement for the Hawker Hurricane. It had excellent performance at low altitude and was an effective fighter-bomber."
- tech_UK_cas_equipment_5_a:0 "Hawker Typhoon MK V CAS"
+ 
+ UK_cas_equipment_5_a:0 "Hawker Tempest MK V CAS"
+ UK_cas_equipment_5_a_short:0 "Tempest MK V CAS"
+ UK_cas_equipment_5_a_desc:0 "The Tempest, originally known as the Typhoon II, was an improved derivative of the Hawker Typhoon, intended to address the Typhoon's unexpected deterioration in performance at high altitude by replacing its wing with a thinner laminar flow design."
+ 
+ 
  hawker_monofury_equipment:0 "Fury "
  hawker_monofury_equipment_desc:0 "Light Fighters are fast and nimble and can do many jobs. Everything from fighting for air superiority, protect your bombers and intercept the enemies bombers."
  hawker_monofury_equipment_1:0 "Hawker Fury"
