--- a/bicemodded/localisation/english/decisions_l_english.yml
+++ b/bicemodded/localisation/english/decisions_l_english.yml
@@ -169,3 +169,10 @@
  flags_raised:0 "Flags Raised"
  the_day_of_sacrifice:0 "The Day of Sacrifice"
  blood_and_toil:0 "Blood and Toil"
+ #generic cat films
+ cats_in_uniforms:0 "Cats in Uniforms"
+ cats_on_mission:0 "Cats on a Mission"
+ cats_aboard:0 "All cats Aboard!"
+ ##
+ die_krankenschwester:0 "Die Krankenschwester"
+ flying_witches:0 "Flying Witches"
