--- a/bicemodded/localisation/english/events_l_english.yml
+++ b/bicemodded/localisation/english/events_l_english.yml
@@ -2229,6 +2229,9 @@
  political.33.desc:0 "In an effort to improve public opinion towards the war effort, our propaganda ministers selected the exceptional cinematic production '[ROOT.GetCountryAppropriateFilmProduction]' - a sublime viewing experience with a strong patriotic sentiment - for screening across the country.\n\nWe hope this heralds the beginning of a long and storied tradition for our patriotic film industry - the results have been excellent so far."
  political.33.a:0 "A masterpiece."
  
+ political.331.t:0 "[ROOT.GetCountryAppropriateFilmProductionCat]"
+ political.332.t:0 "[ROOT.GetCountryAppropriateFilmProductionAirforce]"
+ 
  political.34.t:0 "People demand justice!"
  political.34.d:0 "People throughout the country demand to know why we have not declared war yet! After a series of newspaper articles portraying an enemy country as a vile aggressor and rumors of foreign diplomats burning our flag the protestors have besieged that countries embassy. There are also cries for war from protestors in other cities, it might not matter much which country we attack but the people demand blood!"
  political.34.a:0 "Rattle the sabers"
