--- a/bicemodded/localisation/english/core_l_english.yml
+++ b/bicemodded/localisation/english/core_l_english.yml
@@ -1955,3 +1955,4 @@
  SUNK_BY_MINES:0 "mines"
  PARADROP_PLANES_REQUIRED: "\n§RThis order cannot be executed:§!\nAn additional $WINGS|H$ transport wing(s) are required."
  RETAIN_CORES:0 "Retain States With Our Core"
+ DIVISION_VIEW_HAS_MEDALS:0 "This division can be awarded a §HMedal§!.\n§GClick to open Medals view.§!"
