--- a/bicemodded/localisation/english/diplomacy_l_english.yml
+++ b/bicemodded/localisation/english/diplomacy_l_english.yml
@@ -1381,7 +1381,7 @@
  embargo_receiver_desc:0 "$COUNTRY|H$ is embargoed by other countries"
  embargo_receiver_extended_desc:0 "$COUNTRY2|Y$ is embargoed by $COUNTRY1|Y$"
  embargo_initiator_desc:0 "$COUNTRY|H$ is embargoing other countries"
- embargo_initiator_extended_desc:0 "$COU`NTRY1|Y$ is embargoing $COUNTRY2|Y$"
+ embargo_initiator_extended_desc:1 "$COUNTRY1|Y$ is embargoing $COUNTRY2|Y$"
  refused_sanctions_modifier:0 "Refused to embargo us"
  supporting_ethiopia_modifier_ITA:0 "Has supported [ETH.GetName]"
  supporting_ethiopia_modifier_ETH:0 "Has supported [ETH.GetName]"
