--- a/bicemodded/localisation/english/effects_l_english.yml
+++ b/bicemodded/localisation/english/effects_l_english.yml
@@ -343,7 +343,8 @@
  EFFECT_CREATE_SHIP:0 "Create a $VARIANT|H$ ship from $COUNTRY|H$"
  CUSTOM_EFFECT_CREATE_FAKE_ARMIES:0 "Will create fake intel units that can be used to deceive your enemies."
  CUSTOM_EFFECT_CREATE_FAKE_ARMIES_RESULT:0 "Created [?num_to_create|.0H] fake intel units that can be used against your enemies."
- EFFECT_ADD_CIVIL_WAR_TARGET:0 "Consider $COUNTRY$ as the civil war revolter"
+ EFFECT_ADD_CIVIL_WAR_TARGET:1 "Set $COUNTRY$ as civil war opponent"
+ EFFECT_REMOVE_CIVIL_WAR_TARGET:0 "Remove $COUNTRY$ as civil war opponent"
  add_ruling_to_dem_tt:0 "Add all §Y[ROOT.GetRulingIdeology]§! support to §Ydemocratic§!."
  add_ruling_to_fas_tt:0 "Add all §Y[ROOT.GetRulingIdeology]§! support to §Yfascism§!."
  add_ruling_to_com_tt:0 "Add all §Y[ROOT.GetRulingIdeology]§! support to §Ycommunism§!."
