--- a/bicemodded/localisation/english/mtg_focus_l_english.yml
+++ b/bicemodded/localisation/english/mtg_focus_l_english.yml
@@ -422,7 +422,7 @@
  ENG_british_commonwealth_air_training_plan_desc:0 "Our military success hinges upon our mastery of the air, and therefore the skill of our air crews. We will embark upon the largest aviation training program the world has ever seen to ensure we have all the trained pilots and crews we require to master this new dimension of warfare."
  ENG_indian_autonomy:0 "Indian Autonomy"
  ENG_indian_autonomy_desc:0 "Rather than promise full independence, it is possible we may be able to weaken the Indian independence movements by giving them far-reaching autonomy, much like the other Dominions already enjoy."
- ENG_indian_autonomy_tt:0 "§RWithout autonomy, [RAJ.GetNameDef] will not accept any proposals for Imperial Federation.§!"
+ ENG_indian_autonomy_tt:1 "§RWithout autonomy or Lord Halifax as country leader, [RAJ.GetNameDef] will not accept any proposals for Imperial Federation.§!"
  ENG_imperial_conference_defense_dominion:0 "Imperial Conference Defense Agreements"
  ENG_imperial_conference_economy_dominion:0 "Imperial Conference Economy Agreements"
  ENG_federal_integration:0 "Federal Integration"
