--- a/bicemodded/localisation/english/diplomacy_l_english.yml
+++ b/bicemodded/localisation/english/diplomacy_l_english.yml
@@ -1105,7 +1105,10 @@
  AVERAGE_MEMBER_STRENGTH:0 "Average member strength"
  DR_SAME_FACTION_AS:0 "In a faction with $COUNTRY|H$: "
  DR_US_HELPED_THEM_WITH_COUP:1 "§Y$US|U$§! helped §Y$THEM$§! with the coup: "
- huge_increase:0 "Huge Increase in opinion"
+ huge_increase:0 "Huge increase in opinion"
+ huge_decrease:0 "Huge decrease in opinion"
+ very_large_increase:0 "Very Large increase in opinion"
+ very_large_decrease:0 "Very Large decrease in opinion"
  embargo:1 "Industrial Sector Embargo"
  backed_our_cause:0 "Backed our cause"
  betrayed_our_cause:0 "Betrayed our cause"
