Germany WIP need to push because new pc is here
yey

--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -384,6 +384,13 @@
  SPR_sent_volunteers_to_SPA_flag_desc:0 "The Condor Legion was a German combined army / air force unit that saw extensive service during the Spanish Civil War. They were the first proponents of terror bombing, and their wartime experience greatly influenced development of the Bf 109."
  end_of_czechoslovakia:0 "Controls Bohemia"
  GER_air_innovations_1_idea:0 "German Pilot Training"
+ 
+ GER_grosraumwirtschaft_tt_2:0 "TEST"
+ GER_grosraumwirtschaft_tt_3:0 "Test 2"
+ GER_grosraumwirtschaft:0 "Grossraumwirtschaft"
+ GER_grosraumwirtschaft_desc:0 "Embracing the concept of Grossraumwirtschaft, or 'economic sphere,' allows us to establish a dominant economic zone, fostering trade and prosperity."
+ GER_grosraumwirtschaft_instant_desc:0 "Negotiating a trade treaty with the following nations will grant us the following bonuses:\n§G15%§! §Yextra resources, for§! §G15%§! §Yfewer civilian factories per trade unit!§!\n§YHungary, Romania, Yugoslavia, Bulgaria§!"
+
  GER_four_year_plan:0 "Four Year Plan"
  GER_four_year_plan_desc:0 "For decades, we have allowed unchecked control over our economy, believing in the “free markets” to optimize the use of our resources. Time and time again, we have seen that it does not bring prosperity to the masses, rather it enriches wealthy oligarchs who hold dubious loyalties to our regime and it's future plans. §RWill be removed when in offensive war.§!\n"
  GER_railway_boost:0 "Rush Eastern Railway Consctruction"
